--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@vue/compiler-sfc": "^3.2.38",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.4.0",
+    "rete": "^1.4.9",
     "rollup": "^2.79.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.33.0",
     "rollup-plugin-vue": "^6.0.0",
     "typescript": "^4.8.2",
-    "vue": "^2.7.10",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
-    "vue-template-compiler": "^2.7.10"
+    "vue": "^3.2.38"
   },
-  "peerDependencies": {
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+  "dependencies": {
+    "vue": "^3.2.38"
   }
 }
