add new control

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
-
-  {
+{
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "compilerOptions": {
     "jsx": "preserve",
@@ -12,10 +11,14 @@
     "importHelpers": true,
     "strict": true,
     "experimentalDecorators": true,
+    "allowJs": true,
   },
-    "typeRoots": [
-      "./node_modules/@types/",
-      "./src/localtypes"
-    ],
-  "include": ["src/**/*.ts", "src/**/*.vue"]
+  "typeRoots": [
+    "./node_modules/@types/",
+    "./src/localtypes"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.vue"
+  ]
 }
