Try to inherit the component

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue": "^3.2.38"
   },
   "dependencies": {
+    "rollup-plugin-import-css": "^3.0.3",
     "vue": "^3.2.38",
-    "vue-select": "^4.0.0-beta.5"
+    "vue-select": "^3.16.2"
   }
 }
