--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/vue-select": "^3.16.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vue/compiler-sfc": "^3.2.38",
@@ -32,8 +31,9 @@
     "vue": "^3.2.38"
   },
   "dependencies": {
+    "@types/vue-select": "^3.16.2",
     "rollup-plugin-import-css": "^3.0.3",
     "vue": "^3.2.38",
-    "vue-select": "^3.16.2"
+    "vue-select": "^4.0.0-beta.5"
   }
 }
