--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "vue": "^3.2.38"
   },
   "dependencies": {
-    "@types/vue-select": "^3.16.2",
     "rollup-plugin-import-css": "^3.0.3",
-    "vue": "^3.2.38",
-    "vue-select": "^4.0.0-beta.5"
+    "vue": "^3.2.38"
   }
 }
